REGRESSION(r283864): Apple Pay named images are missing https://bugs.webkit.org/show_bug.cgi?id=232050 <rdar://problem/84413831>

Reviewed by Andy Estes.

Source/WebCore:

`NamedImageGeneratedImage` already does a translate before calling into `drawNamedImage`, so
there's no reason to pass along the location of the named image. Instead, just pass the size.

Tests: fast/css/webkit-named-image/apple-pay-logo-black/offset.html
       fast/css/webkit-named-image/apple-pay-logo-white/offset.html

* platform/Theme.h:
* platform/Theme.cpp:
(WebCore::Theme::drawNamedImage const):
* platform/cocoa/ThemeCocoa.h:
* platform/cocoa/ThemeCocoa.mm:
(WebCore::drawApplePayButton):
(WebCore::ThemeCocoa::drawNamedImage const):

* platform/graphics/NamedImageGeneratedImage.cpp:
(WebCore::NamedImageGeneratedImage::draw):
(WebCore::NamedImageGeneratedImage::drawPattern):

LayoutTests:

* fast/css/webkit-named-image/apple-pay-logo-black/offset.html: Added.
* fast/css/webkit-named-image/apple-pay-logo-black/offset-expected-mismatch.html: Added.
* fast/css/webkit-named-image/apple-pay-logo-white/offset.html: Added.
* fast/css/webkit-named-image/apple-pay-logo-white/offset-expected-mismatch.html: Added.

* fast/css/webkit-named-image/apple-pay-logo-white/background-size-centered.html:
* fast/css/webkit-named-image/apple-pay-logo-white/background-size-centered-expected-mismatch.html:
* fast/css/webkit-named-image/apple-pay-logo-white/background-size.html:
* fast/css/webkit-named-image/apple-pay-logo-white/background-size-expected-mismatch.html:
* fast/css/webkit-named-image/apple-pay-logo-white/basic.html:
* fast/css/webkit-named-image/apple-pay-logo-white/basic-expected-mismatch.html:
* fast/css/webkit-named-image/apple-pay-logo-white/container-larger-height.html:
* fast/css/webkit-named-image/apple-pay-logo-white/container-larger-height-expected-mismatch.html:
* fast/css/webkit-named-image/apple-pay-logo-white/container-larger-width.html:
* fast/css/webkit-named-image/apple-pay-logo-white/container-larger-width-expected-mismatch.html:
* fast/css/webkit-named-image/apple-pay-logo-white/mask.html:
* fast/css/webkit-named-image/apple-pay-logo-white/mask-expected-mismatch.html:
Drive-by: fix these to also have `background-color: black;` in the `-expected-mismatch.html`.


Canonical link: https://commits.webkit.org/243345@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284624 268f45cc-cd09-0410-ab3c-d52691b4dbfc