Source/WebCore/platform/graphics/NamedImageGeneratedImage.cpp
@@ -51,7 +51,7 @@ ImageDrawResult NamedImageGeneratedImage::draw(GraphicsContext& context, const F
         context.scale(FloatSize(dstRect.width() / srcRect.width(), dstRect.height() / srcRect.height()));
     context.translate(-srcRect.location());
 
-    Theme::singleton().drawNamedImage(m_name, context, dstRect);
+    Theme::singleton().drawNamedImage(m_name, context, dstRect.size());
     return ImageDrawResult::DidDraw;
 #else
     UNUSED_PARAM(context);
@@ -70,7 +70,7 @@ void NamedImageGeneratedImage::drawPattern(GraphicsContext& context, const Float
         return;
 
     GraphicsContext& graphicsContext = imageBuffer->context();
-    Theme::singleton().drawNamedImage(m_name, graphicsContext, FloatRect(0, 0, size().width(), size().height()));
+    Theme::singleton().drawNamedImage(m_name, graphicsContext, size());
 
     // Tile the image buffer into the context.
     imageBuffer->drawPattern(context, dstRect, srcRect, patternTransform, phase, spacing, options);
